[package]
name = "bevy_ldtk_workflow"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.25.0"
bevy_asset = "0.14.0"
bevy_egui = "0.28.0"
bevy_reflect = "0.14.0"
bevy_render = "0.14.0"
bevy_window = "0.14.0"
egui = "0.28.1"
once_cell = "1.19.0"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"

[build-dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"

